# codeclimate-shellcheck

./: .codeclimate.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  Build.plan  Dockerfile  Makefile  README.md  Release.plan  build.sh  cabal.config  codeclimate-shellcheck.cabal  release.sh  stack.yaml
app/: CLI.hs  Main.hs
data/: env.yml  mapping.json  mapping.yml  prepare.rb
docker/: Build.plan  Release.plan  build.sh  release.sh
docker/files/: glibc-2.23-r1.apk  glibc-bin-2.23-r1.apk
src/: CC.hs  Main.hs
src/CC/: Analyse.hs  Analyze.hs  Types.hs
src/CC/ShellCheck/: Analyze.hs  Env.hs  Fingerprint.hs  ShellScript.hs  Types.hs
src/Data/: Shebang.hs
test/: Spec.hs  example.sh
test/CC/ShellCheck/: FingerprintSpec.hs
