name:          codeclimate-shellcheck
version:       0.1.0.0
synopsis:      Code Climate engine that wraps ShellCheck
homepage:      https://github.com/filib/codeclimate-shellcheck
license:       GPL-3
license-file:  LICENSE
author:        Philip Cunningham
maintainer:    hello@filib.io
category:      Static Analysis
build-type:    Simple
cabal-version: >=1.10
description:
  codeclimate-shellcheck is a Code Climate engine that wraps ShellCheck.
  You can run it on your command line using the Code Climate CLI, or on our
  hosted analysis platform.

Source-repository head
  type: git
  location: https://github.com/filib/codeclimate-shellcheck

executable engine
  main-is:
    Main.hs
  other-modules:
    CC.Analyze
    CC.Types
  build-depends:
      aeson      >= 0.9.0.1  && <= 0.10.0.0
    , base       >= 4.7      && <= 5
    , bytestring >= 0.10.4.0 && <= 0.11.0.0
    , directory  >= 1.2.1.0  && <= 1.3.0.0
    , Glob       >= 0.7.5    && <= 0.8.0
    , ShellCheck >= 0.4.1    && <= 0.5.0
  hs-source-dirs: src
  default-language: Haskell2010
