name:          codeclimate-shellcheck
version:       0.1.0.0
synopsis:      Code Climate engine that wraps ShellCheck
homepage:      https://github.com/filib/codeclimate-shellcheck
license:       GPL-3
license-file:  LICENSE
author:        Philip Cunningham
maintainer:    hello@filib.io
category:      Static Analysis
build-type:    Simple
cabal-version: >=1.10
description:
  codeclimate-shellcheck is a Code Climate engine that wraps ShellCheck.
  You can run it on your command line using the Code Climate CLI, or on our
  hosted analysis platform.

Source-repository head
  type: git
  location: https://github.com/filib/codeclimate-shellcheck

library
  exposed-modules:
    CC
    CC.ShellCheck.Analyze
    CC.ShellCheck.Env
    CC.ShellCheck.ShellScript
    CC.ShellCheck.Types
    CC.Types
    Data.Shebang
  build-depends:
      aeson      >= 0.9.0.1  && <= 0.10.0.0
    , attoparsec >= 0.13.0.0 && <= 0.14.0.0
    , base       >= 4.7      && <= 5
    , bytestring >= 0.10.4.0 && <= 0.11.0.0
    , containers >= 0.5.6.0  && <= 0.5.7.0
    , directory  >= 1.2.1.0  && <= 1.3.0.0
    , extra      >= 1.4.0    && <= 1.5.0
    , filepath   >= 1.3.0.0  && <= 1.4.0.0
    , Glob       >= 0.7.5    && <= 0.8.0
    , ShellCheck >= 0.4.1    && <= 0.5.0
    , text       >= 1.1.0.0  && <= 1.2.1.3
    , yaml       >= 0.8.0.0  && <= 0.9.0.0
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

executable codeclimate-shellcheck
  main-is:
    Main.hs
  build-depends:
      base >= 4.7 && <= 5
    , codeclimate-shellcheck
  hs-source-dirs: app
  ghc-options: -Wall
  default-language: Haskell2010
