name:          codeclimate-shellcheck
version:       0.1.0.0
synopsis:      Code Climate engine that wraps ShellCheck
homepage:      https://github.com/filib/codeclimate-shellcheck
license:       GPL-3
license-file:  LICENSE
author:        Philip Cunningham
maintainer:    hello@filib.io
category:      Static Analysis
build-type:    Simple
cabal-version: >=1.10
description:
  codeclimate-shellcheck is a Code Climate engine that wraps ShellCheck.
  You can run it on your command line using the Code Climate CLI, or on our
  hosted analysis platform.

Source-repository head
  type: git
  location: https://github.com/filib/codeclimate-shellcheck

library
  exposed-modules:
    CC
    CC.ShellCheck.Analyze
    CC.ShellCheck.Env
    CC.ShellCheck.Fingerprint
    CC.ShellCheck.ShellScript
    CC.ShellCheck.Types
    CC.Types
    Data.Shebang
  build-depends:
      base >= 4.7 && <= 5
    , aeson
    , attoparsec
    , bytestring
    , containers
    , directory
    , extra
    , filepath
    , Glob
    , pureMD5
    , ShellCheck
    , text
    , yaml
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

executable codeclimate-shellcheck
  main-is:
    Main.hs
  other-modules:
    CLI
  build-depends:
      base >= 4.7 && <= 5
    , codeclimate-shellcheck
    , optparse-applicative
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite codeclimate-shellcheck-test
  main-is:
    Spec.hs
  other-modules:
    CC.ShellCheck.FingerprintSpec
  type: exitcode-stdio-1.0

  build-depends:
      base >= 4.7 && <= 5
    , codeclimate-shellcheck
    , aeson
    , aeson-qq
    , bytestring
    , directory
    , filepath
    , ShellCheck
    , string-qq
    , tasty
    , tasty-hspec
    , tasty-hunit
    , text
    , temporary
    , hspec
  hs-source-dirs: test
  ghc-options: -Wall
  default-language: Haskell2010
